package org.example.aircraft.domain;

public enum AircraftStatus {
    ACTIVE,
    IN_FLIGHT,
    INACTIVE,
    UNDER_MAINTENANCE
}
